add log level for messaging service

--- a/influenzanet/templates/app_messaging.yaml
+++ b/influenzanet/templates/app_messaging.yaml
@@ -68,6 +68,8 @@ spec:
                 value: "{{ template "ref.emailClientService" $ }}"
               - name: ADDR_LOGGING_SERVICE
                 value: "{{ template "ref.loggingService" $ }}"
+              - name: LOG_LEVEL
+                value: "{{ .logLevel }}"
             ports:
               - containerPort: {{ .containerPort }}
 ---
