--- a/influenzanet/templates/app_emailclient.yaml
+++ b/influenzanet/templates/app_emailclient.yaml
@@ -16,6 +16,8 @@ spec:
     metadata:
       labels:
         app: {{ .name }}
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") $ | sha256sum }}
     spec:
       containers:
         - name: {{ .name }}
